--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ selectedClips/10-60-1280x720.txt
 selectedClips/30-30-1920x1080.txt
 selectedClips/46-30-484x360.txt
 selectedClips/52-30-1280x720.txt
+finetunedDAN.zip
