updating git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ finetunedTermsDANAffect_8/DANTERM_best_loss.pth.tar
 finetunedTermsDANAffect_8/DANTERM_best_val_loss.pth.tar
 DAN.rar
 .vscode/launch.json
+reconstructed_from_learned/
