Adding Accuracy with two step validation

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@ reconstructed_from_training/
 reconstructed_from_validation/
 runs/
 trainPytorch/reconstructed_from_learned/
+Relabel_AffectNet(1).xlsx
+.vscode/launch.json
+reconstructed_from_validation/
