Adding more details to finetuning VAE with conds

--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,7 @@ Relabel_AffectNet(1).xlsx
 .vscode/launch.json
 reconstructed_from_validation/
 ALAE/
+categLevels.CSV
+.vscode/launch.json
+ALAE.zip
+178127.png
