--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,15 @@ imagesLogits_8/
 logitsPOSTERV2/
 logitsDAN/
 joinedAffWildNet/
+resnetBatchnormWindowAtt/
+resnetDanAttentionCalculation/
+resnetEmotionRelative/
+resnetRecognitionAttention/
+resnetRecognitionAttentionLatent/
+resnetRecognitionAttentionWindow/
+resnetRecognitionAttentionWindow_meanAVG/
+vaeLearnedFeatures_closs/
+vaeLearnedFeatures_good_bad_neutral/
+vaeLearnedFeatures_noclass/
+vaeLearnedFeatures_non_segmented_neutral/
+vaeLearnedFeatures_test/
