Update requirements and refactor visHedonics.py for enhanced emotion analysis and visualization capabilities

--- a/visualizacao/requirements.txt
+++ b/visualizacao/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.28.2
-pandas==2.1.4
-plotly==5.17.0
-numpy==1.26.0
+streamlit>=1.28.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+numpy>=1.24.0
